# bigquery-storage-write-api-examples

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  conf_example.yaml  hello.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
misc/proto/: classes.proto  courses.proto  enrollments.proto  instructors.proto  students.proto
misc/schemas/: classes.json  courses.json  enrollments.json  instructors.json  students.json
src/bigquery_storage_write_api_examples/: __init__.py  cli.py  data_generator.py  fake_data_generator.py  prepare_bigquery.py  proto_file.py
src/bigquery_storage_write_api_examples/entities/classes/: classes_pb2.py
src/bigquery_storage_write_api_examples/entities/courses/: courses_pb2.py
src/bigquery_storage_write_api_examples/entities/enrollments/: enrollments_pb2.py
src/bigquery_storage_write_api_examples/entities/instructors/: instructors_pb2.py
src/bigquery_storage_write_api_examples/entities/students/: students_pb2.py
src/bigquery_storage_write_api_examples/examples/: __init__.py  buffered_type_stream_writer_example.py  committed_type_stream_writer_example.py  default_stream_writer_example.py  pending_type_stream_writer_example.py
